# fc

./: README.md  main.py  pyproject.toml
data/: 2025_09_02_FC_K_A_all_raw.csv  2025_09_02_FC_K_A_cleaned.csv  2025_09_02_FC_K_A_cleaned_sample.csv  before_fc.csv  before_fc_cleaned.csv  before_fc_summary_stats.csv  combined_before_after_fc.csv  data_dictionary.csv
fc/: output_helper.py
notebooks/: 00_engagement_statistical_analysis.ipynb  01_engagement_regression.ipynb  02_engagement_groups.ipynb  03_causal_analysis.ipynb  Korelacije.ipynb  bak_00_engagement_statistical_analysis.ipynb  bak_01_engagement_regression.ipynb  bak_2_engagement_statistical_analysis.ipynb  before_fc_grade_analysis.ipynb  comprehensive_engagement_analysis.ipynb  data_cleaning.ipynb  engagement_achievement_analysis.ipynb  evolutionary_analysis.ipynb  exploratory_data_analysis.ipynb  fc_exploratory_data_analysis.ipynb  visualize_variables.ipynb  year_wise_statistical_analysis_detailed.ipynb
tests/: test_func.py
