[project]
name = "fc"
version = "0.0.1"
description = "A template for Python projects"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Giovanni Giacometti", email = "giovanni.giacometti5@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "jupyterlab>=4.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.1",
    "pyarrow>=15.0.0",
    "tabulate>=0.9.0",
    "kaleido>=0.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
